deployment-http-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommender-app
  namespace: recommender
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommender-app
      role: http-web-service
  template:
    metadata:
      labels:
        app: recommender-app
        role: http-web-service
    spec: 
      containers:          
        - name: java  
          image: 937351930975.dkr.ecr.us-east-1.amazonaws.com/k8s-recommender:multiarch
          imagePullPolicy: Always   
          ports:
            - containerPort: 8080
              name: http 
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "500m" 
              memory: "1000Mi"
          livenessProbe:
            httpGet: 
              path: /live
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3            
          readinessProbe:
            httpGet: 
              path: /ready
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3        
            
---
apiVersion: v1
kind: Service
metadata:
  name: recommender-svc
  namespace: recommender
spec:
  sessionAffinity: None
  type: ClusterIP  
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: recommender-app
    role: http-web-service
